--- a/front-end/src/app/admin/edit-produit/edit-produit.component.html
+++ b/front-end/src/app/admin/edit-produit/edit-produit.component.html
@@ -1,16 +1,16 @@
 <div class="vert-center p-3">
   <div class="product-form">
-    <h5 class="text-center title-app">Modifier le produit</h5>
+    <h4 class="text-center title-app">Modifier le produit</h4>
 
 
     <form (ngSubmit)="editProduct()" #productForm="ngForm" enctype="multipart/form-data">
       <div class="form-group">
-        <label for="libelle">*Nom du produit:</label>
+        <label for="libelle">Nom du produit:</label>
         <input type="text" id="libelle" name="libelle" class="form-control" [(ngModel)]="productToSend.libelle" required>
       </div>
 
       <div class="form-group">
-        <label for="description">*Description:</label>
+        <label for="description">Description:</label>
         <textarea id="description" name="description" class="form-control" [(ngModel)]="productToSend.description" maxlength="200"
           required>
         {{p.description}}
@@ -18,18 +18,18 @@
       </div>
 
       <div class="form-group">
-        <label for="libelle">*Image</label>
+        <label for="libelle">Image</label>
         <input type="file" id="img" name="image" class="form-control" accept="image/*" required
           (change)="handleFileInput($event)">
       </div>
 
       <div class="form-group">
-        <label for="prix">*Prix:</label>
+        <label for="prix">Prix:</label>
         <input type="number" id="prix" name="prix" class="form-control" [(ngModel)]="productToSend.prix" min="0" required>
       </div>
 
       <div class="form-group">
-        <label for="category">*Catégorie:</label>
+        <label for="category">Catégorie:</label>
         <select [(ngModel)]="productToSend.categorieID" name="categorieID" class="form-control" required>
           <option *ngFor="let categorie of categories" [value]="categorie.categorieID" >{{ categorie.libelle }}
           </option>
@@ -47,12 +47,10 @@
 
       </div>
 
-     <!--  <div class="text-center pt-3">
-        <p *ngIf="errorMsg">Veuillez renseigner tous les champs obligatoires.</p>
-        <button type="submit" class="btn btn-primary" [disabled]="!productForm.valid">Ajouter le produit</button>
-      </div> -->
-      <!-- <p>{{product | json}}</p> -->
-      <button type="submit" class="btn btn-primary">Modifier</button>
+      <div class="text-center pt-1">
+
+        <button type="submit" class="btn btn-primary">Modifier</button>
+      </div>
     </form>
   </div>
 </div>
