--- a/front-end/src/app/admin/edit-produit/edit-produit.component.html
+++ b/front-end/src/app/admin/edit-produit/edit-produit.component.html
@@ -49,7 +49,9 @@
 
       <div class="text-center pt-1">
 
-        <button type="submit" class="btn btn-primary">Modifier</button>
+        <button type="submit" class="btn btn-primary me-1">Modifier</button>
+        <button  class="btn btn-primary">Annuler</button>
+
       </div>
     </form>
   </div>
